Add connection to BD postgres

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,21 @@ spec:
     spec:
       containers:
       - name: django-app
-        image: soydiegomen/django_hello_app:latest
+        image: soydiegomen/django_hello_app:v2
         ports:
         - containerPort: 8000
+        env:
+          - name: POSTGRES_USER
+            valueFrom:
+              secretKeyRef:
+                name: postgres-credentials
+                key: user
+
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: postgres-credentials
+                key: password
+
+          - name: POSTGRES_HOST
+            value: postgres-service
