--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 asgiref==3.5.1
 Django==4.0.4
 sqlparse==0.4.2
+#Mac library
+#psycopg2-binary==2.9.3
+psycopg2
+#celery==4.1.0
+#Django==2.1
+#kombu==4.2.1
+#django-health-check==3.0.0
+#psycopg2==2.7.5
