Add last postgres setup

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -18,25 +18,25 @@ spec:
         image: soydiegomen/django_hello_app:v3.1
         ports:
         - containerPort: 8000
-        startupProbe:
-          httpGet:
-            path: /health/
-            port: 8000
-          failureThreshold: 12
-          periodSeconds: 10
-        livenessProbe:
-          httpGet:
-            path: /health/
-            port: 8000
-          failureThreshold: 2
-          initialDelaySeconds: 60
-          periodSeconds: 30
-        readinessProbe:
-          httpGet:
-            path: /health/
-            port: 8000
-          initialDelaySeconds: 60
-          periodSeconds: 30
+        # startupProbe:
+        #   httpGet:
+        #     path: /health/
+        #     port: 8000
+        #   failureThreshold: 12
+        #   periodSeconds: 10
+        # livenessProbe:
+        #   httpGet:
+        #     path: /health/
+        #     port: 8000
+        #   failureThreshold: 2
+        #   initialDelaySeconds: 60
+        #   periodSeconds: 30
+        # readinessProbe:
+        #   httpGet:
+        #     path: /health/
+        #     port: 8000
+        #   initialDelaySeconds: 60
+        #   periodSeconds: 30
         env:
           - name: POSTGRES_USER
             valueFrom:
@@ -51,4 +51,4 @@ spec:
                 key: password
 
           - name: POSTGRES_HOST
-            value: postgres-service-postgresql
+            value: django-app-postgresql #Service name
